# shallowFoam

./: CMakeLists.txt  Makefile  shallowFoam.C  shallowFoam.H  shallowFoam0506.C  shallowFoam0606.C  shallowFoam2905.C  shallowFoamadjustable.C  shallowFoamimplicit.C  shallowFoamsimplevelo.C  shallowFoamwmesh.C
Make/: options
Make/linux64GccDPInt64Opt/: options  shallowFoam.C.dep  variables
backups/: shallowFoam0406.C  shallowFoam0706.C  shallowFoam0806.C  shallowFoam1006.C  shallowFoam1306.C  shallowFoam1506.C  shallowFoam1606.C  shallowFoam1806.C  shallowFoam2505.C  shallowFoam3105.C  shallowFoamimplicit.C  shallowFoamlogvelo.C
tutorials/: precice-config.xml
tutorials/bidirectional-explicit/: precice-config.xml
tutorials/bidirectional-iFsF/: precice-config impl.xml
tutorials/bidirectional-implicit/: precice-config.xml
tutorials/bidirectional-sFiF/: precice-config.xml
tutorials/interFoam-shallowFoam/: precice-config.xml
tutorials/interFoamlong/: reference0.0.csv  reference0.1.csv  reference0.10.csv  reference0.11.csv  reference0.12.csv  reference0.13.csv  reference0.14.csv  reference0.15.csv  reference0.16.csv  reference0.17.csv  reference0.18.csv  reference0.19.csv  reference0.2.csv  reference0.20.csv  reference0.21.csv  reference0.22.csv  reference0.23.csv  reference0.24.csv  reference0.25.csv  reference0.26.csv  reference0.27.csv  reference0.28.csv  reference0.29.csv  reference0.3.csv  reference0.30.csv  reference0.31.csv  reference0.32.csv  reference0.33.csv  reference0.34.csv  reference0.35.csv  reference0.36.csv  reference0.37.csv  reference0.38.csv  (+171 more)
(+2539 files in other folders)
